Added content update index.html
a 2nd post and recent post added.

--- a/index.html
+++ b/index.html
@@ -84,12 +84,51 @@
                     </div>
                 </div>
             </section>
+            <!-- 2nd post -->
+            <section class="postOut">
+                <div id="post">
+                    <section class="postTop">
+                        <a href="" id="pUser">user1</a>
+                        <p>1 hr. ago</p>
+                        <a class="btn">...</a>
+                    </section>
+                    <h1 id="pHeader">post header</h1>
+                    <div id="pImg">
+                        <img src="" alt="">
+                    </div>
+                    <div id="pVoteNav">
+                        <span>
+                            <a href="">u</a>
+                            <p>15</p>
+                            <a href="">d</a>
+                        </span>
+                        <a href="">comment</a>
+                        <a href="">share</a>
+                    </div>
+                </div>
+            </section>
         </section>
         <section id="rNav">
             <div id="rNHeader">
                 <h1>resent posts</h1>
                 <a href="">clear</a>
             </div>
+            <div id="recentPost">
+                <section id="recentData">
+                    <section>
+                        <a href="" id="recentUser">user2</a>
+                        <a href="" id="recentHeader">resent post header</a>
+                    </section>
+                    <section id="recentImg">
+                        <img src="" alt="">
+                    </section>
+                </section>
+                <span>
+                    <p>4k upvotes </p>
+                    <p>700 comments</p>
+                </span>
+            </div>
+            <!-- 2nd post -->
             <div id="recentPost">
                 <section id="recentData">
                     <section>
